# kalman_tracker

./: CMakeLists.txt  README.md  requirements.txt
config/: evasive_degraded.json  linear_3sensor.json
data/: output_real_a1f503.csv  output_real_aaa954.csv  track_EJA225_a1f503.csv  track_SWA698_aaa954.csv
include/: kalman_filter.h  real_track.h  sensor.h  simulation.h  statistics.h  target.h
scripts/: fetch_opensky_track.py  plot_results.py
src/: kalman_filter.cpp  main.cpp  real_track.cpp  sensor.cpp  simulation.cpp  statistics.cpp  target.cpp
tests/: test_kalman_filter.cpp  test_sensor.cpp  test_statistics.cpp
